y.output
   0  $accept : program $end

   1  program : declarations
   2          | function_definitions

   3  declarations : declaration
   4               | declarations declaration

   5  declaration : data_type ID ASSIGN expression SEMICOLON

   6  function_definitions : function_definition
   7                       | function_definitions function_definition

   8  function_definition : data_type ID LPAREN opt_parameter_list RPAREN compound_statement

   9  opt_parameter_list :
  10                     | parameter_list

  11  parameter_list : data_type ID
  12                 | parameter_list COMMA data_type ID

  13  compound_statement : LBRACE statement_list RBRACE

  14  data_type : INT
  15            | DOUBLE
  16            | CHAR
  17            | STRING
  18            | BOOL

  19  expression : term
  20             | expression ADD term
  21             | expression SUB term

  22  term : factor
  23       | term MUL factor
  24       | term DIV factor
  25       | term MOD factor

  26  factor : INTEGER
  27         | DOUBLENUM
  28         | STRINGLIT
  29         | LPAREN expression RPAREN
  30         | ID

  31  condition : expression EQ expression
  32            | expression NEQ expression
  33            | expression LT expression
  34            | expression GT expression
  35            | expression LTEQ expression
  36            | expression GTEQ expression

  37  statement_list : statement
  38                 | statement_list statement

  39  statement : if_statement
  40            | declaration
  41            | while_statement
  42            | compound_statement
  43            | print_statement
  44            | exit_statement
  45            | return_statement

  46  return_statement : RETURN expression SEMICOLON

  47  if_statement : IF LPAREN condition RPAREN compound_statement
  48               | IF LPAREN condition RPAREN compound_statement ELSE compound_statement

  49  while_statement : WHILE LPAREN condition RPAREN compound_statement

  50  print_statement : PRINT LPAREN expression RPAREN SEMICOLON

  51  exit_statement : EXIT SEMICOLON

state 0
	$accept : . program $end  (0)

	INT  shift 1
	DOUBLE  shift 2
	CHAR  shift 3
	STRING  shift 4
	BOOL  shift 5
	.  error

	program  goto 6
	declarations  goto 7
	function_definitions  goto 8
	declaration  goto 9
	data_type  goto 10
	function_definition  goto 11


state 1
	data_type : INT .  (14)

	.  reduce 14


state 2
	data_type : DOUBLE .  (15)

	.  reduce 15


state 3
	data_type : CHAR .  (16)

	.  reduce 16


state 4
	data_type : STRING .  (17)

	.  reduce 17


state 5
	data_type : BOOL .  (18)

	.  reduce 18


state 6
	$accept : program . $end  (0)

	$end  accept


state 7
	program : declarations .  (1)
	declarations : declarations . declaration  (4)

	INT  shift 1
	DOUBLE  shift 2
	CHAR  shift 3
	STRING  shift 4
	BOOL  shift 5
	$end  reduce 1

	declaration  goto 12
	data_type  goto 13


state 8
	program : function_definitions .  (2)
	function_definitions : function_definitions . function_definition  (7)

	INT  shift 1
	DOUBLE  shift 2
	CHAR  shift 3
	STRING  shift 4
	BOOL  shift 5
	$end  reduce 2

	data_type  goto 14
	function_definition  goto 15


state 9
	declarations : declaration .  (3)

	.  reduce 3


state 10
	declaration : data_type . ID ASSIGN expression SEMICOLON  (5)
	function_definition : data_type . ID LPAREN opt_parameter_list RPAREN compound_statement  (8)

	ID  shift 16
	.  error


state 11
	function_definitions : function_definition .  (6)

	.  reduce 6


state 12
	declarations : declarations declaration .  (4)

	.  reduce 4


state 13
	declaration : data_type . ID ASSIGN expression SEMICOLON  (5)

	ID  shift 17
	.  error


state 14
	function_definition : data_type . ID LPAREN opt_parameter_list RPAREN compound_statement  (8)

	ID  shift 18
	.  error


state 15
	function_definitions : function_definitions function_definition .  (7)

	.  reduce 7


state 16
	declaration : data_type ID . ASSIGN expression SEMICOLON  (5)
	function_definition : data_type ID . LPAREN opt_parameter_list RPAREN compound_statement  (8)

	ASSIGN  shift 19
	LPAREN  shift 20
	.  error


state 17
	declaration : data_type ID . ASSIGN expression SEMICOLON  (5)

	ASSIGN  shift 19
	.  error


state 18
	function_definition : data_type ID . LPAREN opt_parameter_list RPAREN compound_statement  (8)

	LPAREN  shift 20
	.  error


state 19
	declaration : data_type ID ASSIGN . expression SEMICOLON  (5)

	LPAREN  shift 21
	ID  shift 22
	INTEGER  shift 23
	DOUBLENUM  shift 24
	STRINGLIT  shift 25
	.  error

	expression  goto 26
	term  goto 27
	factor  goto 28


state 20
	function_definition : data_type ID LPAREN . opt_parameter_list RPAREN compound_statement  (8)
	opt_parameter_list : .  (9)

	INT  shift 1
	DOUBLE  shift 2
	CHAR  shift 3
	STRING  shift 4
	BOOL  shift 5
	RPAREN  reduce 9

	data_type  goto 29
	opt_parameter_list  goto 30
	parameter_list  goto 31


state 21
	factor : LPAREN . expression RPAREN  (29)

	LPAREN  shift 21
	ID  shift 22
	INTEGER  shift 23
	DOUBLENUM  shift 24
	STRINGLIT  shift 25
	.  error

	expression  goto 32
	term  goto 27
	factor  goto 28


state 22
	factor : ID .  (30)

	.  reduce 30


state 23
	factor : INTEGER .  (26)

	.  reduce 26


state 24
	factor : DOUBLENUM .  (27)

	.  reduce 27


state 25
	factor : STRINGLIT .  (28)

	.  reduce 28


state 26
	declaration : data_type ID ASSIGN expression . SEMICOLON  (5)
	expression : expression . ADD term  (20)
	expression : expression . SUB term  (21)

	ADD  shift 33
	SUB  shift 34
	SEMICOLON  shift 35
	.  error


state 27
	expression : term .  (19)
	term : term . MUL factor  (23)
	term : term . DIV factor  (24)
	term : term . MOD factor  (25)

	MUL  shift 36
	DIV  shift 37
	MOD  shift 38
	LT  reduce 19
	GT  reduce 19
	EQ  reduce 19
	NEQ  reduce 19
	LTEQ  reduce 19
	GTEQ  reduce 19
	ADD  reduce 19
	SUB  reduce 19
	RPAREN  reduce 19
	SEMICOLON  reduce 19


state 28
	term : factor .  (22)

	.  reduce 22


state 29
	parameter_list : data_type . ID  (11)

	ID  shift 39
	.  error


state 30
	function_definition : data_type ID LPAREN opt_parameter_list . RPAREN compound_statement  (8)

	RPAREN  shift 40
	.  error


state 31
	opt_parameter_list : parameter_list .  (10)
	parameter_list : parameter_list . COMMA data_type ID  (12)

	COMMA  shift 41
	RPAREN  reduce 10


state 32
	expression : expression . ADD term  (20)
	expression : expression . SUB term  (21)
	factor : LPAREN expression . RPAREN  (29)

	ADD  shift 33
	SUB  shift 34
	RPAREN  shift 42
	.  error


state 33
	expression : expression ADD . term  (20)

	LPAREN  shift 21
	ID  shift 22
	INTEGER  shift 23
	DOUBLENUM  shift 24
	STRINGLIT  shift 25
	.  error

	term  goto 43
	factor  goto 28


state 34
	expression : expression SUB . term  (21)

	LPAREN  shift 21
	ID  shift 22
	INTEGER  shift 23
	DOUBLENUM  shift 24
	STRINGLIT  shift 25
	.  error

	term  goto 44
	factor  goto 28


state 35
	declaration : data_type ID ASSIGN expression SEMICOLON .  (5)

	.  reduce 5


state 36
	term : term MUL . factor  (23)

	LPAREN  shift 21
	ID  shift 22
	INTEGER  shift 23
	DOUBLENUM  shift 24
	STRINGLIT  shift 25
	.  error

	factor  goto 45


state 37
	term : term DIV . factor  (24)

	LPAREN  shift 21
	ID  shift 22
	INTEGER  shift 23
	DOUBLENUM  shift 24
	STRINGLIT  shift 25
	.  error

	factor  goto 46


state 38
	term : term MOD . factor  (25)

	LPAREN  shift 21
	ID  shift 22
	INTEGER  shift 23
	DOUBLENUM  shift 24
	STRINGLIT  shift 25
	.  error

	factor  goto 47


state 39
	parameter_list : data_type ID .  (11)

	.  reduce 11


state 40
	function_definition : data_type ID LPAREN opt_parameter_list RPAREN . compound_statement  (8)

	LBRACE  shift 48
	.  error

	compound_statement  goto 49


state 41
	parameter_list : parameter_list COMMA . data_type ID  (12)

	INT  shift 1
	DOUBLE  shift 2
	CHAR  shift 3
	STRING  shift 4
	BOOL  shift 5
	.  error

	data_type  goto 50


state 42
	factor : LPAREN expression RPAREN .  (29)

	.  reduce 29


state 43
	expression : expression ADD term .  (20)
	term : term . MUL factor  (23)
	term : term . DIV factor  (24)
	term : term . MOD factor  (25)

	MUL  shift 36
	DIV  shift 37
	MOD  shift 38
	LT  reduce 20
	GT  reduce 20
	EQ  reduce 20
	NEQ  reduce 20
	LTEQ  reduce 20
	GTEQ  reduce 20
	ADD  reduce 20
	SUB  reduce 20
	RPAREN  reduce 20
	SEMICOLON  reduce 20


state 44
	expression : expression SUB term .  (21)
	term : term . MUL factor  (23)
	term : term . DIV factor  (24)
	term : term . MOD factor  (25)

	MUL  shift 36
	DIV  shift 37
	MOD  shift 38
	LT  reduce 21
	GT  reduce 21
	EQ  reduce 21
	NEQ  reduce 21
	LTEQ  reduce 21
	GTEQ  reduce 21
	ADD  reduce 21
	SUB  reduce 21
	RPAREN  reduce 21
	SEMICOLON  reduce 21


state 45
	term : term MUL factor .  (23)

	.  reduce 23


state 46
	term : term DIV factor .  (24)

	.  reduce 24


state 47
	term : term MOD factor .  (25)

	.  reduce 25


state 48
	compound_statement : LBRACE . statement_list RBRACE  (13)

	INT  shift 1
	DOUBLE  shift 2
	CHAR  shift 3
	STRING  shift 4
	BOOL  shift 5
	PRINT  shift 51
	EXIT  shift 52
	IF  shift 53
	WHILE  shift 54
	RETURN  shift 55
	LBRACE  shift 48
	.  error

	declaration  goto 56
	data_type  goto 13
	compound_statement  goto 57
	statement_list  goto 58
	statement  goto 59
	if_statement  goto 60
	while_statement  goto 61
	print_statement  goto 62
	exit_statement  goto 63
	return_statement  goto 64


state 49
	function_definition : data_type ID LPAREN opt_parameter_list RPAREN compound_statement .  (8)

	.  reduce 8


state 50
	parameter_list : parameter_list COMMA data_type . ID  (12)

	ID  shift 65
	.  error


state 51
	print_statement : PRINT . LPAREN expression RPAREN SEMICOLON  (50)

	LPAREN  shift 66
	.  error


state 52
	exit_statement : EXIT . SEMICOLON  (51)

	SEMICOLON  shift 67
	.  error


state 53
	if_statement : IF . LPAREN condition RPAREN compound_statement  (47)
	if_statement : IF . LPAREN condition RPAREN compound_statement ELSE compound_statement  (48)

	LPAREN  shift 68
	.  error


state 54
	while_statement : WHILE . LPAREN condition RPAREN compound_statement  (49)

	LPAREN  shift 69
	.  error


state 55
	return_statement : RETURN . expression SEMICOLON  (46)

	LPAREN  shift 21
	ID  shift 22
	INTEGER  shift 23
	DOUBLENUM  shift 24
	STRINGLIT  shift 25
	.  error

	expression  goto 70
	term  goto 27
	factor  goto 28


state 56
	statement : declaration .  (40)

	.  reduce 40


state 57
	statement : compound_statement .  (42)

	.  reduce 42


state 58
	compound_statement : LBRACE statement_list . RBRACE  (13)
	statement_list : statement_list . statement  (38)

	INT  shift 1
	DOUBLE  shift 2
	CHAR  shift 3
	STRING  shift 4
	BOOL  shift 5
	PRINT  shift 51
	EXIT  shift 52
	IF  shift 53
	WHILE  shift 54
	RETURN  shift 55
	LBRACE  shift 48
	RBRACE  shift 71
	.  error

	declaration  goto 56
	data_type  goto 13
	compound_statement  goto 57
	statement  goto 72
	if_statement  goto 60
	while_statement  goto 61
	print_statement  goto 62
	exit_statement  goto 63
	return_statement  goto 64


state 59
	statement_list : statement .  (37)

	.  reduce 37


state 60
	statement : if_statement .  (39)

	.  reduce 39


state 61
	statement : while_statement .  (41)

	.  reduce 41


state 62
	statement : print_statement .  (43)

	.  reduce 43


state 63
	statement : exit_statement .  (44)

	.  reduce 44


state 64
	statement : return_statement .  (45)

	.  reduce 45


state 65
	parameter_list : parameter_list COMMA data_type ID .  (12)

	.  reduce 12


state 66
	print_statement : PRINT LPAREN . expression RPAREN SEMICOLON  (50)

	LPAREN  shift 21
	ID  shift 22
	INTEGER  shift 23
	DOUBLENUM  shift 24
	STRINGLIT  shift 25
	.  error

	expression  goto 73
	term  goto 27
	factor  goto 28


state 67
	exit_statement : EXIT SEMICOLON .  (51)

	.  reduce 51


state 68
	if_statement : IF LPAREN . condition RPAREN compound_statement  (47)
	if_statement : IF LPAREN . condition RPAREN compound_statement ELSE compound_statement  (48)

	LPAREN  shift 21
	ID  shift 22
	INTEGER  shift 23
	DOUBLENUM  shift 24
	STRINGLIT  shift 25
	.  error

	expression  goto 74
	term  goto 27
	factor  goto 28
	condition  goto 75


state 69
	while_statement : WHILE LPAREN . condition RPAREN compound_statement  (49)

	LPAREN  shift 21
	ID  shift 22
	INTEGER  shift 23
	DOUBLENUM  shift 24
	STRINGLIT  shift 25
	.  error

	expression  goto 74
	term  goto 27
	factor  goto 28
	condition  goto 76


state 70
	expression : expression . ADD term  (20)
	expression : expression . SUB term  (21)
	return_statement : RETURN expression . SEMICOLON  (46)

	ADD  shift 33
	SUB  shift 34
	SEMICOLON  shift 77
	.  error


state 71
	compound_statement : LBRACE statement_list RBRACE .  (13)

	.  reduce 13


state 72
	statement_list : statement_list statement .  (38)

	.  reduce 38


state 73
	expression : expression . ADD term  (20)
	expression : expression . SUB term  (21)
	print_statement : PRINT LPAREN expression . RPAREN SEMICOLON  (50)

	ADD  shift 33
	SUB  shift 34
	RPAREN  shift 78
	.  error


state 74
	expression : expression . ADD term  (20)
	expression : expression . SUB term  (21)
	condition : expression . EQ expression  (31)
	condition : expression . NEQ expression  (32)
	condition : expression . LT expression  (33)
	condition : expression . GT expression  (34)
	condition : expression . LTEQ expression  (35)
	condition : expression . GTEQ expression  (36)

	LT  shift 79
	GT  shift 80
	EQ  shift 81
	NEQ  shift 82
	LTEQ  shift 83
	GTEQ  shift 84
	ADD  shift 33
	SUB  shift 34
	.  error


state 75
	if_statement : IF LPAREN condition . RPAREN compound_statement  (47)
	if_statement : IF LPAREN condition . RPAREN compound_statement ELSE compound_statement  (48)

	RPAREN  shift 85
	.  error


state 76
	while_statement : WHILE LPAREN condition . RPAREN compound_statement  (49)

	RPAREN  shift 86
	.  error


state 77
	return_statement : RETURN expression SEMICOLON .  (46)

	.  reduce 46


state 78
	print_statement : PRINT LPAREN expression RPAREN . SEMICOLON  (50)

	SEMICOLON  shift 87
	.  error


state 79
	condition : expression LT . expression  (33)

	LPAREN  shift 21
	ID  shift 22
	INTEGER  shift 23
	DOUBLENUM  shift 24
	STRINGLIT  shift 25
	.  error

	expression  goto 88
	term  goto 27
	factor  goto 28


state 80
	condition : expression GT . expression  (34)

	LPAREN  shift 21
	ID  shift 22
	INTEGER  shift 23
	DOUBLENUM  shift 24
	STRINGLIT  shift 25
	.  error

	expression  goto 89
	term  goto 27
	factor  goto 28


state 81
	condition : expression EQ . expression  (31)

	LPAREN  shift 21
	ID  shift 22
	INTEGER  shift 23
	DOUBLENUM  shift 24
	STRINGLIT  shift 25
	.  error

	expression  goto 90
	term  goto 27
	factor  goto 28


state 82
	condition : expression NEQ . expression  (32)

	LPAREN  shift 21
	ID  shift 22
	INTEGER  shift 23
	DOUBLENUM  shift 24
	STRINGLIT  shift 25
	.  error

	expression  goto 91
	term  goto 27
	factor  goto 28


state 83
	condition : expression LTEQ . expression  (35)

	LPAREN  shift 21
	ID  shift 22
	INTEGER  shift 23
	DOUBLENUM  shift 24
	STRINGLIT  shift 25
	.  error

	expression  goto 92
	term  goto 27
	factor  goto 28


state 84
	condition : expression GTEQ . expression  (36)

	LPAREN  shift 21
	ID  shift 22
	INTEGER  shift 23
	DOUBLENUM  shift 24
	STRINGLIT  shift 25
	.  error

	expression  goto 93
	term  goto 27
	factor  goto 28


state 85
	if_statement : IF LPAREN condition RPAREN . compound_statement  (47)
	if_statement : IF LPAREN condition RPAREN . compound_statement ELSE compound_statement  (48)

	LBRACE  shift 48
	.  error

	compound_statement  goto 94


state 86
	while_statement : WHILE LPAREN condition RPAREN . compound_statement  (49)

	LBRACE  shift 48
	.  error

	compound_statement  goto 95


state 87
	print_statement : PRINT LPAREN expression RPAREN SEMICOLON .  (50)

	.  reduce 50


state 88
	expression : expression . ADD term  (20)
	expression : expression . SUB term  (21)
	condition : expression LT expression .  (33)

	ADD  shift 33
	SUB  shift 34
	RPAREN  reduce 33


state 89
	expression : expression . ADD term  (20)
	expression : expression . SUB term  (21)
	condition : expression GT expression .  (34)

	ADD  shift 33
	SUB  shift 34
	RPAREN  reduce 34


state 90
	expression : expression . ADD term  (20)
	expression : expression . SUB term  (21)
	condition : expression EQ expression .  (31)

	ADD  shift 33
	SUB  shift 34
	RPAREN  reduce 31


state 91
	expression : expression . ADD term  (20)
	expression : expression . SUB term  (21)
	condition : expression NEQ expression .  (32)

	ADD  shift 33
	SUB  shift 34
	RPAREN  reduce 32


state 92
	expression : expression . ADD term  (20)
	expression : expression . SUB term  (21)
	condition : expression LTEQ expression .  (35)

	ADD  shift 33
	SUB  shift 34
	RPAREN  reduce 35


state 93
	expression : expression . ADD term  (20)
	expression : expression . SUB term  (21)
	condition : expression GTEQ expression .  (36)

	ADD  shift 33
	SUB  shift 34
	RPAREN  reduce 36


state 94
	if_statement : IF LPAREN condition RPAREN compound_statement .  (47)
	if_statement : IF LPAREN condition RPAREN compound_statement . ELSE compound_statement  (48)

	ELSE  shift 96
	INT  reduce 47
	DOUBLE  reduce 47
	CHAR  reduce 47
	STRING  reduce 47
	BOOL  reduce 47
	PRINT  reduce 47
	EXIT  reduce 47
	IF  reduce 47
	WHILE  reduce 47
	RETURN  reduce 47
	LBRACE  reduce 47
	RBRACE  reduce 47


state 95
	while_statement : WHILE LPAREN condition RPAREN compound_statement .  (49)

	.  reduce 49


state 96
	if_statement : IF LPAREN condition RPAREN compound_statement ELSE . compound_statement  (48)

	LBRACE  shift 48
	.  error

	compound_statement  goto 97


state 97
	if_statement : IF LPAREN condition RPAREN compound_statement ELSE compound_statement .  (48)

	.  reduce 48


39 terminals, 21 nonterminals
52 grammar rules, 98 states

grammar parser grammar
symbol# value# symbol
     0      0  $end
     1    256  error
     2    257  INT
     3    258  DOUBLE
     4    259  CHAR
     5    260  STRING
     6    261  BOOL
     7    262  PRINT
     8    263  EXIT
     9    264  IF
    10    265  ELSE
    11    266  WHILE
    12    267  RETURN
    13    268  ASSIGN
    14    269  LT
    15    270  GT
    16    271  EQ
    17    272  NEQ
    18    273  LTEQ
    19    274  GTEQ
    20    275  ADD
    21    276  SUB
    22    277  MUL
    23    278  DIV
    24    279  MOD
    25    280  NOT
    26    281  LPAREN
    27    282  RPAREN
    28    283  LBRACE
    29    284  RBRACE
    30    285  SEMICOLON
    31    286  COMMA
    32    287  ID
    33    288  INTEGER
    34    289  DOUBLENUM
    35    290  CHARLIT
    36    291  STRINGLIT
    37    292  BOOLOP
    38    293  UNRECOGNIZED
    39    294  $accept
    40    295  program
    41    296  declarations
    42    297  function_definitions
    43    298  declaration
    44    299  data_type
    45    300  expression
    46    301  function_definition
    47    302  opt_parameter_list
    48    303  compound_statement
    49    304  parameter_list
    50    305  statement_list
    51    306  term
    52    307  factor
    53    308  condition
    54    309  statement
    55    310  if_statement
    56    311  while_statement
    57    312  print_statement
    58    313  exit_statement
    59    314  return_statement
